fixed broken layout in search bar

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,6 @@ a.text-decoration-none {
 }
 
 .cardComp {
-  width: 15rem;
   transition: border-color 0.3s ease;
 }
 
